--- a/packages/graphic-walker/package.json
+++ b/packages/graphic-walker/package.json
@@ -74,6 +74,7 @@
     "@tailwindcss/forms": "^0.5.4",
     "@tanstack/react-virtual": "^3.13.12",
     "@types/jest": "^29.5.3",
+    "animejs": "^4.2.2",
     "autoprefixer": "^10.3.5",
     "canvas-size": "^1.2.6",
     "class-variance-authority": "^0.7.0",
