--- a/packages/graphic-walker/package.json
+++ b/packages/graphic-walker/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kanaries/graphic-walker",
-  "version": "0.5.0",
+  "version": "0.5.0-alpha.4",
   "scripts": {
     "dev:front_end": "vite --host",
     "dev": "npm run dev:front_end",
